--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.20
-loader_version=0.8.8+build.202
+minecraft_version=20w46a
+yarn_mappings=20w46a+build.20
+loader_version=0.10.8
 
 # Mod Properties
 mod_version=0.6.0
@@ -14,5 +14,5 @@ archives_base_name=phosphor-fabric
 
 cf_project_id=372124
 cf_project_name=Phosphor
-cf_game_version=1.16
+cf_game_version=1.17
 
